# AuroraPlus

./: README.md  pyproject.toml  readme.md  setup.cfg  setup.py  test.py  tests.py
.github/workflows/: release.yml  tests.yml
AuroraPlus/: LICENSE.txt  README.md  __init__.py  setup.py
auroraplus/: __init__.py  api.py  get_token.py  repl.py
tests/: conftest.py  consts.py  test_api.py  test_auth.py
