[build-system]
requires = ["setuptools>=61.2", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
dynamic = [ "version", "readme" ]
name = 'auroraplus'
license = ' MIT'
description = 'Python library to access the Aurora+ API: https://api.auroraenergy.com.au/api'
authors = [
 { name = 'Leigh Curran', email = 'AuroraPlusPy@outlook.com' },
]
keywords = ['Aurora+', 'AuroraPlus', 'Aurora', 'Tasmania', 'API']
requires-python = ">=3.9"
dependencies = [
  'brotli',
  'requests',
  'requests_oauthlib',
]
classifiers = [
  'Development Status :: 3 - Alpha',      # Chose either "3 - Alpha", "4 - Beta" or "5 - Production/Stable" as the current state of your package
  'Intended Audience :: Developers',
  'Topic :: Software Development :: Build Tools',
  'Programming Language :: Python :: 3.5',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
]

[project.optional-dependencies]
build = [ 'build<0.10.0' ]

[project.scripts]
auroraplus_get_token = "auroraplus:get_token"

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
